<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MediaPlayer!</string>
    <string name="app_name">MediaPlayer</string>
    <string name="video_volume_adjust">Volume</string>
    <string name="audio_info_disc">Album:</string>
    <string name="audio_info_songster">Artist:</string>
    <string name="audio_info_genor">Genre:</string>
    <string name="audio_info_unknown">Unknown</string>
    <string name="audio_info_no_lylic">No lyrics found</string>
    <string name="media_source_not_found">Unable to get the media resource file</string>
    <string name="unknown_media_format">No support for the format of media file!</string>
    <string name="unknown_audio_format">No support for the audio format of media file!</string>
    <string name="unknown_video_format">No support for the video format of media file!</string>
    <string name="media_interrupt">Sorry,unable to play this media resource!</string>
    <string name="media_player_init_error">Sorry,unable to play this media resource!</string>
    <string name="media_player_unknown_exception">Sorry,unable to play this media resource!</string>
    <string name="media_player_exception">Sorry,unable to play this media resource!</string>
    <string name="media_player_timeout">Data from the network timed out, please check your
		network!</string>
    <string name="media_player_netUnausable">Network is unavailable, please check your network</string>
    <string name="media_player_netUsable">Connected to network！</string>
    <string name="media_player_network_slow">Network connection timed out</string>
    <string name="media_player_timeout_local">Access to data timeout,please check your device and
		try again!</string>
    <string name="media_player_listNull">The playlist is null. Please select media files to
		play!</string>
    <string name="media_player_not_seekable">Unable to seek the file! </string>
    <string name="music_service_started">Music Service started</string>
    <string name="local_service_label">Local Music Service</string>
    <string name="Video_Info_Play">Play</string>
    <string name="Video_Info_Pause">Pause</string>
    <string name="Video_Info_Rewind_30S">Backward</string>
    <string name="Video_Info_FastForward_30S">Forward</string>
    <string name="Video_Info_Last_Film">Previous</string>
    <string name="Video_Info_Next_Film">Next</string>
    <string name="Video_Info_RepeatMode_Normal">Order</string>
    <string name="Video_Info_RepeatMode_Single">Once</string>
    <string name="Video_Info_RepeatMode_Re_all">Repeat All</string>
    <string name="Video_Info_RepeatMode_Re_one">Repeat One</string>
    <string name="Video_Info_RepeatMode_Random">Random</string>
    <string name="Video_Info_Volume_adjust">Volume</string>
    <string name="Video_Info_Favorite">Collection</string>
    <string name="Video_Info_Cancel_favorite">No Collection</string>
    <string name="Video_Info_return">Back</string>
    <string name="Video_Info_detail">Detail</string>
    <string name="Audio_Info_Play">Play</string>
    <string name="Audio_Info_Pause">Pause</string>
    <string name="Audio_Info_Rewind_FiveS">Backward</string>
    <string name="Audio_Info_FastForward_FiveS">Forward</string>
    <string name="Audio_Info_Last_Film">Previous</string>
    <string name="Audio_Info_Next_Film">Next</string>
    <string name="Audio_Info_RepeatMode_Normal">Order</string>
    <string name="Audio_Info_RepeatMode_Single">Once</string>
    <string name="Audio_Info_RepeatMode_Re_all">Repeat All</string>
    <string name="Audio_Info_RepeatMode_Re_one">Repeat One</string>
    <string name="Audio_Info_RepeatMode_Random">Random</string>
    <string name="Audio_Info_Volume_adjust">Volume</string>
    <string name="Audio_Info_Lyc">Show Lyrics</string>
    <string name="Audio_Info_Cancel_Lyc">Dismiss Lyrics</string>
    <string name="Audio_Info_return">Back</string>
    <string name="play_break">Continue</string>
    <string name="play_begin">Replay</string>
    <string name="play_pos_select">Select play position</string>
    <string name="SIS_Cancel">Cancel</string>
    <string name="SIS_ok">Confirm</string>
    <string name="breakfrom">Would you like to play from the last play point（</string>
    <string name="breakto">）or from the beginning？</string>
    <string name="volumadd">+</string>
    <string name="volumminuse">-</string>
    <string name="volummin">0</string>
    <string name="volummax">100</string>
    <string name="volumChange">Volume</string>
    <string name="turnThree">3D Mode</string>
    <string name="fontSong">SongTi</string>
    <string name="NoFuntion">Sorry,the function is under development!</string>
    <string name="AdvancedSetTip">Sub Track</string>
    <string name="AdvancedSet">Set Subtitle and Audio Track</string>
    <string name="subtitle">Subtitle</string>
    <string name="subtitle_begin">Subtitle</string>
    <string name="audioTrack_begin">AudioTrack</string>
    <string name="audioTrack">Audio" "Track</string>
    <string name="default_sub">None</string>
    <string name="default_track">Default</string>
    <string name="Tips">Tips</string>
    <string name="DefaultTime">00:00</string>
    <string name="asking">Query</string>
    <string name="image">Settings</string>
    <string name="back_light">Backlight</string>
    <string name="natural_light">Nature Light</string>
    <string name="natural_light_open">Open</string>
    <string name="natural_light_close">Close</string>
    <string name="videonothreeD">Sorry, it do not support 3D settings!</string>
    <string name="videofuctionnothreeD">Sorry, unable to set 3D mode!</string>
    <string name="isThreeD_mode_on">3D is on. Please set up in 3D menu.</string>
    <string name="threed_no_picsetting">3D Mode is on. Please set up in 3D menu!</string>
    <string name="audiotrack_iszero">No Audio Track in this media file!</string>
    <string name="video_info">Video Info</string>
    <string name="video_name">Name:</string>
    <string name="video_code">Format:</string>
    <string name="video_rate">Video Rate:</string>
    <string name="video_duration">Duration:</string>
    <string name="video_resolution">Resolution:</string>
    <string name="video_size">Size:</string>
    <string name="video_share">Share</string>
    <string name="videotrack_iszero">No Video Track in this media file!</string>
	<string name="already_first_files">The current is already the first one.</string>
	<string name="already_last_files">The current is already the last one.</string>
	<string name="voiceassistkeypressdisable">Not support voice control</string>
	<string name="four_k_video_notshare">4K video is temporarily unable to support sharing.</string>
</resources>
